Closure_114/evosuite/original/evosuite-report-org/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_114_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_114/Closure/evosuite/0/com/google/javascript/jscomp/NameAnalyzer_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_114/Closure/evosuite/0/com/google/javascript/jscomp/NameAnalyzer_ESTest.java >> evosuite-report-org/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_114/Closure/evosuite/0/com/google/javascript/jscomp/NameAnalyzer_ESTest.java:74: error: cannot find symbol
      assertFalse(node0.isObjectLit());
                       ^
  symbol:   method isObjectLit()
  location: variable node0 of type Node
/home/liumengjiao/Desktop/CI/Evosuite/Closure_114/Closure/evosuite/0/com/google/javascript/jscomp/NameAnalyzer_ESTest.java:84: error: cannot find symbol
      assertFalse(node0.isObjectLit());
                       ^
  symbol:   method isObjectLit()
  location: variable node0 of type Node
2 errors
